...
                    .cornerRadius(10)

                // Repository Title
                Text(viewModel.repository.fullName)
                    .font(.largeTitle)
                    .foregroundColor(Color(UIColor.label))
                    .accessibilityIdentifier("DetailView_TitleLabel")

                // Language
                Text("Written in \(viewModel.repository.language)")
                    .font(.body)
                    .foregroundColor(Color(UIColor.secondaryLabel))
                    .accessibilityIdentifier("DetailView_LanguageLabel")

                // Comparison button
                if shouldShowComparisonButton {
                    Button(action: {
                        // Transition to comparison view
                        isComparisonViewPresented = true
...
                            Image(systemName: "flag.checkered.2.crossed")
                                .resizable()
                                .frame(width: 22, height: 22)
                                .aspectRatio(contentMode: .fit)
                                .foregroundStyle(Color(uiColor: UIColor.label))
                            Text("Compare with other repositories")
                                .accessibilityIdentifier("DetailView_ComparisonButtonLabel")
                                .font(.headline)
                                .background(Color.clear)
                                .foregroundColor(Color(uiColor: UIColor.label))
                                .cornerRadius(8)
                        }
                    }
...
