...
        TextField("Search Github Repositories...", text: $searchText, onCommit: performSearch)
            .textFieldStyle(RoundedBorderTextFieldStyle())
            .padding()
            .background(Color(UIColor.systemBackground))
            .cornerRadius(10)
            .padding(.horizontal)
            .accessibilityIdentifier("SearchView_SearchBar")
    }

    private var list: some View {
        List {
            ForEach(viewModel.repositories) { repository in
                Button(action: {
...
